Team requirements, Automatic marks, Automatic teams, Shared team mark, Task formatting
